--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,7 +2,7 @@
 
 
 body {
-	font-family: 'Raleway', sans-serif;
+	font-family: 'BenchNine', cursive;
 	color: #e5e5e5;
 	font-size: 12px;
 	background:#bfbfbf;
@@ -10,9 +10,12 @@ body {
 
 }
 
+.title {
+	font-family: 'Lobster', cursive;		
+}
+
 
 h1, h2 {
-	font-family: 'Raleway', sans-serif;
 	font-weight: 300;
 	margin:0 0 15px 0;
 }
@@ -77,7 +80,7 @@ a {
 	min-height: 50px;
 	padding:30px 0;
 	font-size: 18px;
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Lobster', cursive;
 	font-weight: 300;
 }
 
@@ -109,7 +112,7 @@ a {
 	float: left;
 	margin: 0px 0px 0 0;
 	text-decoration: none;
-	font-size: 14px;
+	font-size: 18px;
 	padding: 15px 2% 0 2%;
 	text-align: center;
 
